apps/client/src/pages/summit.css
.summitPage {
	section {
		display: grid;
		grid-template-areas:
			"image header"
			"image text";

		grid-template-columns: 1fr 1.5fr;

		column-gap: 2rem;
		row-gap: 1rem;
		box-sizing: content-box;
	}

	.text {
		display: flex;
		gap: 1rem;
		flex-direction: column;
		justify-content: start;
		grid-area: text;
	}

	.image {
		display: flex;
		flex-direction: column;
		gap: 0.5rem;
		grid-area: image;
		position: relative;

		text-align: center;
		color: var(--subText);
		img {
			border-radius: var(--defaultBorderRadius);
			overflow: hidden;
			width: 100%;
			border-width: 0.125rem;
			border-style: solid;
		}
	}

	.caption {
		position: absolute;
		top: calc(100% + 0.5rem);
		left: 50%;
		transform: translateX(-50%);
		width: max-content;
	}

	.header {
		font-size: 2rem;
		font-weight: 600;
		/* justify-self: start; */
		grid-area: header;
		place-self: start;
		align-self: end;
	}

	--rows: 4;
	--cardHeight: 6.25rem;

	.attendeesContainer {
		width: 100%;
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		gap: 2rem;
		justify-content: center;

		max-height: calc(var(--rows) * var(--cardHeight) + var(--rows) * 2rem);
		overflow-y: auto;
	}

	.attendeeCard {
		height: var(--cardHeight);
		width: 100%;
		max-width: 22rem;
		box-sizing: border-box;
		display: flex;
		align-items: center;

		padding: 1rem;
		gap: 1rem;

		border-radius: var(--defaultBorderRadius);
		background-color: var(--section);

		img {
			width: 4rem;
			border-radius: calc(var(--defaultBorderRadius) * 0.75);
			background-color: var(--highlight);
			border: 0.125rem solid var(--border);
		}

		.name {
			font-size: 1.25rem;
			font-weight: 600;
		}

		.website {
			color: var(--subText);
		}
	}

	.dateAndSponsor {
		flex-direction: row;
		gap: 1rem;
		width: 100%;
		max-width: 52rem;
	}

	.modrinthLogo {
		height: 3rem;
	}

	.summitLogo {
		flex-grow: 1;
		height: 100%;
		width: 100%;

		max-height: 8rem;
	}

	.summitLogo.small {
		max-height: 6rem;
	}
}





@media screen and (max-width: 48rem) {
	.summitPage {
		section {
			grid-template-areas:
				"header"
				"image"
				"text";

			grid-template-columns: 1fr;
			row-gap: 2rem;
		}

		.header {
			place-self: center;
			text-align: center;
		}

		.dateAndSponsor {
			flex-direction: column;
		}
	}
}

